<resources>
    <string name="app_name">Tekateki-ID</string>
    <string name="action_horizontal">Horizontal</string>
    <string name="action_vertical">Vertical</string>

    <!-- Setting Subtitle -->
    <string name="sub_akun">Informasi akun</string>
    <string name="sub_umum">Umum</string>
    <string name="sub_about">About</string>
    <!-- Setting button -->
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_rule">Aturan permainan</string>
    <string name="menu_how_to">Cara bermain</string>
    <string name="menu_riwayat">Riwayat permainan</string>
    <string name="menu_versi">Versi</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate me</string>
    <!-- Login -->
    <string name="capt_masuk">Masuk</string>
    <string name="capt_keluar">Keluar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Masuk</string>
    <string name="btn_sign_up_fb">Masuk dengan Facebook</string>
    <string name="btn_forgot">Kirim</string>
    <string name="err_msg_email">Isikan alamat email yang valid</string>
    <string name="err_msg_email_exists">Email ini sudah terdaftar</string>
    <string name="err_msg_password">Isikan password anda</string>
    <string name="err_msg_password_k">Konfirmasi password tidak sama</string>
    <string name="err_msg_nama">Isikan nama anda</string>
    <string name="err_msg_kabkota">Anda belum memilih kota asal</string>
    <string name="forgot_pwd">Lupa password? ➠</string>
    <string name="registrasi">Saya belum punya akun ➠</string>
    <string name="konfirm_pass">Konfirmasi password</string>
    <string name="full_name">Nama</string>
    <string name="prov">Provinsi</string>
    <string name="kabkota">Kabupaten / Kota</string>
    <string name="btn_registrasi">Daftar Sekarang</string>
    <string name="hint_new_password">Password baru</string>

    //Title bar
    <string name="title_login">Masuk</string>
    <string name="title_reg">Buat akun baru</string>
    <string name="title_lupa">Lupa password</string>
    <string name="title_berita">Berita</string>
    <string name="title_pengaturan">Pengaturan</string>
    <string name="title_howto">Cara bermain</string>
    <string name="title_riwayat">Riwayat permainan</string>

    //Pengaturan
    <string name="auto_notif">Pemberitahuan info terbaru</string>
    <string name="dark_mode">Mode malam</string>
    <string name="unlogin_name">Anda belum masuk ke aplikasi</string>
    <string name="show_trivia">Tampilkan trivia</string>

    //Guide
    <string name="desc_timer">Untuk mengetahui sudah berapa lama anda menyelesaikan TTS ini, anda bisa menekan menu ini</string>
    <string name="desc_cek">Untuk mengetahui jawaban anda sudah benar atau belum, anda bisa menekan menu ini</string>
    <string name="desc_submit_ans">Untuk mengirim hasil jawaban TTS, anda bisa menekan menu ini</string>
    <string name="desc_menu_more">Menu - menu lain yang bisa anda gunakan (kirim jawaban, tampilkan guide dan cara bermain) bisa diakses dengan menekan menu ini</string>
    <string name="desc_list_quest">Anda bisa melihat daftar pertanyaan TTS dengan menyentuh panel ini</string>
    <string name="desc_orientation">Untuk mengubah orientasi horizontal / vertical, anda bisa menekan tombol ini</string>
    <string name="desc_available">Anda dapat melihat daftar TTS yang tersedia untuk diunduh pada menu ini</string>
    <string name="desc_unduh">Anda dapat melihat daftar TTS yang sudah diunduh pada menu ini</string>
    <string name="desc_rank">Anda dapat melihat daftar peringkat dan skor terakhir semua pengguna pada menu ini</string>
    <string name="desc_news">Anda dapat melihat berita terbaru mengenai TTS pada menu ini</string>
    <string name="desc_other">Anda dapat membuka menu lanjutan pada menu ini</string>

    // Facebook
    <string name="facebook_app_id">1823762604583482</string>
    <string name="fb_login_protocol_scheme">fb1823762604583482</string>
    <string name="fb_debug_hash">wEgY53JMKxyqyNeMJbdvlQ0rJOU=</string>
    <string name="fb_release_hash">1Wrnnv/1Osu5Mk6dPRsZ7XFB3SI=</string>

    //Admob
    <string name="unit_id_sample">ca-app-pub-3940256099942544/6300978111</string>
    <string name="unit_id_admob">ca-app-pub-3323952393155404/8253592837</string>

    <string name="empty_text">Tidak ada data yang bisa ditampilkan</string>
    <string name="tts_wiki">
        Teka-teki silang, umumnya disingkat dengan TTS, adalah suatu permainan di mana kita harus mengisi ruang-ruang kosong (berbentuk kotak putih) dengan huruf-huruf yang membentuk sebuah kata berdasarkan petunjuk yang diberikan. Petunjuknya biasa dibagi ke dalam kategori "mendatar" dan "menurun".
        Pada 2 Desember 1913, Arthur Wynne menerbitkan TTS dalam majalah New York World dengan format seperti yang kita kenal saat ini. Teka-teki ini, yang bisa dilihat di situs web Crossword Tournament, sering disebut sebagai TTS pertama, dan Wynne sebagai penemunya.
    </string>
    <string name="mulai_main">Mulai Main</string>
    <string name="login_start">Masuk ke Akun</string>
    <string name="tutup">Tutup</string>
    <string name="aturan">
        - Anda mendapat 2 poin dari setiap huruf yang benar \n\n
        - Tidak ada pengurangan skor jika ada jawaban yang salah \n\n
        - Poin anda akan dikurangi 2 poin setiap 5 menit waktu pengerjaan
          (Contoh : Anda mengerjakan TTS dalam waktu 20 menit, jadi poin anda akan dikurangi sebanyak 20/5*2 = 8 poin. Berlaku pembulatan kebawah)
    </string>
    <string name="howto">
        - Pilih kolom atau baris untuk memunculkan pertanyaan \n\n
        - Orientasi awal memakai orientasi horizontal, anda bisa mengubah orientasi dengan tombol "Toggle" \n\n
        - Ketik jawaban yang anda inginkan \n\n
        - Anda bisa melihat daftar pertanyaan dengan menekan panel pertanyaan \n\n
        - Anda bisa langsung menuju kotak yang dituju dengan memilih salah satu pertanyaan di daftar pertanyaan \n\n
    </string>


    //Rate me
    <string name="rate_dialog_title">Rate Tekateki-ID</string>
    <string name="rate_dialog_message">Jika anda menyukai game ini, bersediakah anda memberikan rating? Tidak lama, hanya beberapa detik saja. Terima kasih untuk supportnya!</string>
    <string name="rate_dialog_ok">Rate Sekarang</string>
    <string name="rate_dialog_cancel">Ingatkan Nanti</string>
    <string name="rate_dialog_no">Tidak, Terima kasih</string>
</resources>
