<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameBg"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_akun"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                fontPath="fonts/Poppins-Bold.ttf"
                tools:ignore="MissingPrefix"/>

            <LinearLayout
                android:background="@drawable/card_bg_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linLayoutAccount"
                android:padding="10dp"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Masuk atau daftar untuk bisa berkompetisi dengan pemain lain"
                    android:textSize="15sp"
                    android:id="@+id/txtFullName"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="12sp"
                    android:id="@+id/txtEmail"
                    android:layout_marginBottom="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="10sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/holo_blue_dark"
                        android:id="@+id/txtFBConnect"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="MASUK"
                        android:textSize="15sp"
                        android:gravity="right"
                        android:textColor="@color/colorAccent"
                        android:id="@+id/txtSign"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_umum"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                fontPath="fonts/Poppins-Bold.ttf"
                tools:ignore="MissingPrefix"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/card_bg_selector"
                android:text="@string/menu_pengaturan"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                fontPath="fonts/Poppins-SemiBold.ttf"
                tools:ignore="MissingPrefix"
                android:layout_marginBottom="2dp"
                android:id="@+id/btnPengaturan"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/card_bg_selector"
                android:text="@string/menu_rule"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                fontPath="fonts/Poppins-SemiBold.ttf"
                tools:ignore="MissingPrefix"
                android:id="@+id/btnRule"
                android:textAllCaps="false"
                android:layout_marginBottom="2dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/card_bg_selector"
                android:text="@string/menu_how_to"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                fontPath="fonts/Poppins-SemiBold.ttf"
                tools:ignore="MissingPrefix"
                android:id="@+id/btnCaraMain"
                android:textAllCaps="false"
                android:layout_marginBottom="2dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/card_bg_selector"
                android:text="@string/menu_riwayat"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                fontPath="fonts/Poppins-SemiBold.ttf"
                tools:ignore="MissingPrefix"
                android:id="@+id/btnRiwayat"
                android:textAllCaps="false"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_about"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                fontPath="fonts/Poppins-Bold.ttf"
                tools:ignore="MissingPrefix"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/card_bg_selector"
                android:text="@string/menu_versi"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                fontPath="fonts/Poppins-SemiBold.ttf"
                tools:ignore="MissingPrefix"
                android:layout_marginBottom="2dp"
                android:id="@+id/btnVersi"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/card_bg_selector"
                android:text="@string/menu_contact"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                fontPath="fonts/Poppins-SemiBold.ttf"
                tools:ignore="MissingPrefix"
                android:id="@+id/btnContact"
                android:textAllCaps="false"
                android:layout_marginBottom="2dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/card_bg_selector"
                android:text="@string/menu_share"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                fontPath="fonts/Poppins-SemiBold.ttf"
                tools:ignore="MissingPrefix"
                android:id="@+id/btnShare"
                android:textAllCaps="false"
                android:layout_marginBottom="2dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/card_bg_selector"
                android:text="@string/menu_rate"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                fontPath="fonts/Poppins-SemiBold.ttf"
                tools:ignore="MissingPrefix"
                android:id="@+id/btnRate"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
